kubernetes/django-app-psql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-psql
  namespace: default
  labels:
    app: db-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: pg-db
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pg-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pg-data
        persistentVolumeClaim:
          claimName: postgres-pvc
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: django-app-psql
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
